# mstore

./: .gitignore  CMakeLists.txt  README.md  fpm.toml  meson.build  meson_options.txt
.github/workflows/: build.yml  wheel.yml
app/: CMakeLists.txt  main.f90  meson.build
app/fortranize/: CMakeLists.txt  main.f90  meson.build
app/info/: CMakeLists.txt  main.f90  meson.build
config/: CMakeLists.txt  install-mod.py  meson.build  template.cmake  template.pc
config/Modules/: Findmctc-lib.cmake
config/cmake/: Findmctc-lib.cmake  mstore-utils.cmake
include/: mstore.h
include/mstore/: error.h  macros.h  structure.h  version.h
python/: README.rst  ffi-builder.py  meson.build  meson_options.txt  mesonpep517.toml  setup.cfg  setup.py
python/include/: _mstore.h
python/mstore/: __init__.py  interface.py  library.py  meson.build  test_library.py
src/: CMakeLists.txt  meson.build  mstore.f90  mstore_version.f90
src/mstore/: CMakeLists.txt  amino20x4.f90  amylose.f90  but14diol.f90  f_block.f90  heavy28.f90  ice10.f90  il16.f90  large.f90  mb16_43.f90  meson.build  mstore.f90  polyalanine.f90  upu23.f90  version.f90  x23.f90
src/mstore/api/: CMakeLists.txt  error.f90  meson.build  structure.f90  utils.f90  version.f90
src/mstore/collections/: CMakeLists.txt  amino20x4.f90  but14diol.f90  heavy28.f90  ice10.f90  il16.f90  mb16_43.f90  meson.build  upu23.f90  x23.f90
src/mstore/data/: CMakeLists.txt  collection.f90  meson.build  record.f90  store.f90
subprojects/: CMakeLists.txt  test-drive.wrap  toml-f.wrap
