[metadata]
name = mstore
version = 0.2.0
description = Molecular structure store for testing
long_description = file: README.rst
license = Apache-2.0
classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Chemistry
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
install_requires =
  cffi
  numpy
tests_require =
    pytest
    pytest-cov
python_requires = >=3.8
