# This file is part of mstore.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

srcs += files(
  'amino20x4.f90',
  'but14diol.f90',
  'heavy28.f90',
  'ice10.f90',
  'il16.f90',
  'mb16_43.f90',
  'upu23.f90',
  'x23.f90',
)
